--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -20,17 +20,26 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      # Optional: check that secrets are populated
+      - name: Debug secrets (safe values only)
+        run: |
+          echo "Resource Group: ${{ secrets.AKS_RG }}"
+          echo "Cluster Name:   ${{ secrets.AKS_NAME }}"
+          echo "ACR:            ${{ secrets.AZURE_CONTAINER_REGISTRY }}"
+
       - name: Set Kubernetes context
         run: |
-          az aks get-credentials --resource-group ${{ secrets.AKS_RG }} \
-                                 --name ${{ secrets.AKS_NAME }} \
-                                 --overwrite-existing
+          az aks get-credentials \
+            --resource-group ${{ secrets.AKS_RG }} \
+            --name ${{ secrets.AKS_NAME }} \
+            --overwrite-existing
 
       - name: Attach ACR
         run: |
-          az aks update --name ${{ secrets.AKS_NAME }} \
-                        --resource-group ${{ secrets.AKS_RG }} \
-                        --attach-acr ${{ secrets.AZURE_CONTAINER_REGISTRY }}
+          az aks update \
+            --name ${{ secrets.AKS_NAME }} \
+            --resource-group ${{ secrets.AKS_RG }} \
+            --attach-acr ${{ secrets.AZURE_CONTAINER_REGISTRY }}
 
       - name: Deploy Backend Infrastructure
         run: |
