--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -3,12 +3,12 @@ name: Frontend CI - Build & Push Image
 
 on:
   pull_request:
-    branches: [ "development" ]
+    branches: [ "main" ]
     paths:
       - 'frontend/**'
       - '.github/workflows/frontend-ci.yml'
   push:
-    branches: [ "development" ]
+    branches: [ "main" ]
     paths:
       - 'frontend/**'
       - '.github/workflows/frontend-ci.yml'
