--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -24,8 +24,8 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - run: az aks get-credentials --resource-group ${{ secrets.AKS_RG }} \
-                                   --name ${{ secrets.AKS_NAME }} \
+      - run: az aks get-credentials --resource-group ${{ secrets.AKS_RG }} 
+                                   --name ${{ secrets.AKS_NAME }} 
                                    --overwrite-existing
 
       - run: az acr login --name ${{ env.ACR_LOGIN_SERVER }}
